<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Chill Session</string>
    <string name="format_app_name"><xliff:g movieId="app_name">%1$s</xliff:g> v<xliff:g movieId="version_number">%2$s</xliff:g></string>
    <string name="title_yote_shin"></string>

    <string name="facebook_app_id">419900364866993</string>

    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_search">Search</string>
    <string name="lbl_current_popularity">Current Popularity</string>
    <string name="lbl_comment">Comment</string>
    <string name="lbl_like">Like</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_see_trailers">See all the trailers</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_login_with_google">Login with Google</string>
    <string name="lbl_login_with_facebook">Login with Facebook</string>
    <string name="sort_by_most_popular">Sort by most popular</string>
    <string name="sort_by_highest_rating">Sort by highest rating</string>
    <string name="sort_movie_ok">Ok</string>
    <string name="sort_movie_cancel">Cancel</string>

    <string name="pref_sort_order_key" translatable="false">pref_sort_order_key</string>

    <string name="most_popular_movies">Most Popular</string>
    <string name="top_rated_movies">Top Rated</string>
    <string name="my_favourites">My Bookmarks</string>
    <string name="loading_more_movies">Loading more movies ...</string>

    <string name="star_data" translatable="false">
            M 200.30535,69.729172
            C 205.21044,69.729172 236.50709,141.52218 240.4754,144.40532
            C 244.4437,147.28846 322.39411,154.86809 323.90987,159.53312
            C 325.42562,164.19814 266.81761,216.14828 265.30186,220.81331
            C 263.7861,225.47833 280.66544,301.9558 276.69714,304.83894
            C 272.72883,307.72209 205.21044,268.03603 200.30534,268.03603
            C 195.40025,268.03603 127.88185,307.72208 123.91355,304.83894
            C 119.94524,301.9558 136.82459,225.47832 135.30883,220.8133
            C 133.79307,216.14828 75.185066,164.19813 76.700824,159.53311
            C 78.216581,154.86809 156.16699,147.28846 160.13529,144.40532
            C 164.1036,141.52218 195.40025,69.729172 200.30535,69.729172 z
    </string>

    <string name="star_lollipop" translatable="false">
            M 223.42,133.484
            C 237.895,98.1973 280.378,100.58 295.49,133.484
            C 302.176,148.044 293.576,165.914 270.253,183.357
            C 264.16,187.914 268.606,245.136 268.606,248.852
            C 268.606,256.589 268.606,295.171 268.606,302.907
            C 268.606,322.848 268.606,329.725 268.606,339.649
            C 268.606,347.385 255.048,349.681 255.048,339.649
            C 255.048,331.913 255.361,310.637 255.048,302.907
            C 254.579,291.371 255.048,256.788 255.048,249.052
            C 255.048,238.561 254.706,187.75 248.302,183.489
            C 221.536,165.677 218.848,144.628 223.42,133.484 z
    </string>
    <string name="star">Bookmarked !!!</string>

    <string name="remove_movie_from_favourite_confirmation_msg">You are about to remove this movie from your Favourite List. Is that what you want ?</string>
    <string name="remove_tv_series_from_favourite_confirmation_msg">You are about to remove this tv series from your Favourite List. Is that what you want ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="section_movie">Movie Shelf</string>
    <string name="empty_favourite_movies">You haven\'t pick any movies as your favourite. Tap the <b>Star</b> in detail screen and see what happen ! ;-)</string>
    <string name="empty_favourite_tv_series">You haven\'t pick any tv series as your favourite. Tap the <b>Star</b> in detail screen and see what happen ! ;-)</string>
    <string name="send_to">Send this trailer to</string>

    <!-- Content Descriptions -->
    <string name="cd_avd_star">Favourite the tvSeries</string>
    <string name="cd_ib_favourite">Tap to favourite the tvSeries</string>
    <string name="cd_ib_facebook">Tap to share the tvSeries on Facebook</string>
    <string name="cd_ib_share">Tap to share the tvSeries</string>
    <string name="cd_ib_plus">Tap to see available actions for the tvSeries</string>
    <string name="cd_iv_cover">Default cover image of the user</string>
    <string name="cd_iv_trailer_preview">Trailer preview image of the tvSeries</string>
    <string name="cd_iv_empty_favourite">Placeholder image for empty list of favourite</string>
    <string name="cd_iv_like">Like this tvSeries</string>
    <string name="cd_iv_save">Save this tvSeries</string>
    <string name="cd_iv_poster">Movie poster</string>
    <string name="cd_iv_backdrop">Backdrop image of the tvSeries</string>
    <string name="cd_iv_profile">User profile image</string>
    <string name="cd_iv_cancel_star">Remove the tvSeries from favourite</string>
    <string name="cd_iv_season_preview">Season preview image of the tvSeries</string>


    <string name="lbl_reviews">Reviews</string>
    <string name="now_playing_movies">Now on Cinema</string>
    <string name="upcoming_movies">Upcoming</string>
    <string name="most_popular_tv_series">Most Popular</string>
    <string name="top_rated_tv_series">Top Rated</string>

    <string name="format_first_air_date">First air date : <xliff:g movieId="first_air_date">%1$s</xliff:g></string>
    <string name="loading_more_tv_series">Loading more TV Series ...</string>
    <string name="section_tv_series">TV Series Shelf</string>

    <string name="format_episode_runtime">Episode runtime : <xliff:g movieId="episode_run_time">%1$s</xliff:g> min</string>
    <string name="lbl_seasons">Seasons</string>

    <string name="format_season_number">Season <xliff:g movieId="season_number">%1$s</xliff:g></string>
    <string name="format_season_air_date">Air date : <xliff:g movieId="season_number">%1$s</xliff:g></string>
    <string name="format_episode_count">Total Episode : <xliff:g movieId="episode_count">%1$s</xliff:g></string>
    <string name="lbl_trailers">Trailers</string>

    <string name="empty_search">Your search result will show up in here.</string>
    <string name="search_hint_movies">Search Movies</string>
    <string name="search_hint_tv_series">Search TV Series</string>

    <string name="feedback">Give Feedback</string>
    <string name="lbl_public_rating">Public Rating</string>
    <string name="movie_overview">Movie Overview</string>
    <string name="msg_empty_overview">There is no overview for this movie. Sorry. :-(</string>

    <string name="contain_special_char_in_query_msg">There are special characters in your search query. Please remove them and try again.</string>
    <string name="ok">OK</string>
    <string name="no_network_msg">There is no internet connectivity detected. Please check if you have turned off the internet.</string>

</resources>
